# rust_on_attiny85_experiment

./: Cargo.toml  Readme.md  avr-unknown-gnu-attiny85.json  blink.hex
src/: main.rs
