[package]
name = "blink"
version = "0.1.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = '2018'

[dependencies]
[dependencies.avr-device]
version = "0.3.2"
features = ["attiny85"]

[profile.dev]
#panic = "abort"
lto = true

[profile.release]
#panic = "abort"
lto = true
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
